--- a/GUI/1A2B_GUI.ui
+++ b/GUI/1A2B_GUI.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>478</width>
+    <width>484</width>
     <height>291</height>
    </rect>
   </property>
@@ -143,7 +143,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>40</y>
+     <y>50</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -162,7 +162,7 @@
   <widget class="QLabel" name="log_label">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>300</x>
      <y>0</y>
      <width>61</width>
      <height>33</height>
@@ -194,6 +194,26 @@
      <weight>75</weight>
      <bold>true</bold>
     </font>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="bgm_checkbox">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>10</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>BGM</string>
    </property>
   </widget>
  </widget>
